--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,17 +28,6 @@
   --z-fixed: 100;
 }
 
-/* Responsive typography */
-/* @media screen and (min-width: 1150px) {
-  :root {
-    --biggest-font-size: 272px;
-    --h2-font-size: 24px;
-    --h3-font-size: 20px;
-    --normal-font-size: 16px;
-    --small-font-size: 14px;
-  }
-} */
-
 /*=============== BASE ===============*/
 * {
   box-sizing: border-box;
@@ -51,6 +40,11 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--first-color);
   color: var(--black-color);
+}
+
+body.dark-theme {
+  background-color: #333;
+  color: #fff;
 }
 
 h1, h2, h3, h4 {
