--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,6 +107,25 @@ img {
   height: auto;
 }
 
+form {
+  z-index: -1;
+  background: var(--card-bg);
+  padding: 144px 12px 24px 12px;
+  border: var(--card-border);
+  border-radius: 24px;
+}
+
+form h2 {
+  margin-top: 5px;
+}
+
+.hide {
+  display: none;
+}
+
+#formErrors {
+  color: #FF6961;
+}
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -603,6 +622,8 @@ img {
   margin-left: 60px;
   margin-right: 0px;
 }
+
+
 
 /* For medium devices */
 @media screen and (min-width: 768px) {
