added css stylying for screen size 430

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,7 +110,6 @@ img {
 form {
   z-index: -1;
   background: var(--card-bg);
-  padding: 144px 12px 24px 12px;
   border: var(--card-border);
   border-radius: 24px;
 }
@@ -580,6 +579,7 @@ form h2 {
 .contact_write {
   max-width: 300px;
   align-items: center;
+  margin-left: 30px;
 }
 
 .contact_social {
@@ -622,7 +622,36 @@ form h2 {
   margin-left: 60px;
   margin-right: 0px;
 }
-
+form {
+  max-width: 300px;
+  margin-left: 50px;
+  padding: 24px 12px 24px 12px;
+}
+form h2 {
+  margin-top: 5px;
+}
+input[type=text], input[type=email] {
+  max-width: 150px;
+  padding: 8px;
+  margin-top: 4px;
+  margin-bottom: 12px;
+  border: var(--first-color);
+  border-radius: 24px;
+  box-sizing: border-box;
+}
+input[type=submit] {
+  width: 100%;
+  color: var(--black-color);
+  background-color: var(--nav-menu-bg);
+  padding: 15px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input.error {
+  border: 2px solid #FF6961;
+}
 
 
 /* For medium devices */
