--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -649,6 +649,15 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
 }
+select {
+  max-width: 150px;
+  padding: 8px;
+  margin-top: 4px;
+  margin-bottom: 12px;
+  border: var(--first-color);
+  border-radius: 24px;
+  box-sizing: border-box;
+}
 input.error {
   border: 2px solid #FF6961;
 }
