--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -624,14 +624,15 @@ form h2 {
 }
 form {
   max-width: 300px;
-  margin-left: 50px;
+  margin-left: 60px;
   padding: 24px 12px 24px 12px;
 }
 form h2 {
   margin-top: 5px;
 }
 input[type=text], input[type=email] {
-  max-width: 150px;
+  /* max-width: 150px; */
+  width: 100%;
   padding: 8px;
   margin-top: 4px;
   margin-bottom: 12px;
@@ -650,7 +651,8 @@ input[type=submit] {
   cursor: pointer;
 }
 select {
-  max-width: 150px;
+  /* max-width: 150px; */
+  width: 100%;
   padding: 8px;
   margin-top: 4px;
   margin-bottom: 12px;
@@ -658,6 +660,12 @@ select {
   border-radius: 24px;
   box-sizing: border-box;
 }
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 input.error {
   border: 2px solid #FF6961;
 }
