--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -623,8 +623,8 @@ form h2 {
   margin-right: 0px;
 }
 form {
-  max-width: 300px;
-  margin-left: 60px;
+  width: 100%;
+  margin-left: 30px;
   padding: 24px 12px 24px 12px;
 }
 form h2 {
