--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -623,6 +623,7 @@ form h2 {
 }
 form {
   width: 100%;
+  height: 100%;
   margin-left: 30px;
   padding: 24px 12px 24px 12px;
 }
@@ -644,7 +645,7 @@ input[type=submit] {
   color: var(--black-color);
   background-color: var(--nav-menu-bg);
   padding: 15px;
-  margin-top: 10px;
+  margin-top: 100px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
