--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1080,7 +1080,57 @@ input.error {
     margin-left: 30px;
   }
   form {
-    margin-left: 30px;
+    position: absolute;
+    top: 1200px;
+    left: 60px;
+    display: block;
+    max-width: 1000;
+    max-height: 400;
+    margin-left: 100px;
+    padding: 24px 12px 24px 12px;
+  }
+  
+  form h2 {
+    margin-top: 5px;
+  }
+  input[type=text], input[type=email] {
+    /* max-width: 150px; */
+    width: 100%;
+    padding: 8px;
+    margin-top: 4px;
+    margin-bottom: 12px;
+    border: var(--first-color);
+    border-radius: 24px;
+    box-sizing: border-box;
+  }
+  input[type=submit] {
+    width: 100%;
+    color: var(--black-color);
+    background-color: var(--nav-menu-bg);
+    padding: 15px;
+    margin-top: 100px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  select {
+    /* max-width: 150px; */
+    width: 100%;
+    padding: 8px;
+    margin-top: 4px;
+    margin-bottom: 12px;
+    border: var(--first-color);
+    border-radius: 24px;
+    box-sizing: border-box;
+  }
+  .contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  input.error {
+    border: 2px solid #FF6961;
   }
 }
 
